# dayzlin

./: .gitignore  Cargo.toml  README.md  dayzlin.flatpakrepo  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release-build.yml  release-pr.yml  release-publish.yml  release.yml
crates/dayz-core/: Cargo.toml
crates/dayz-core/src/: error.rs  launch.rs  lib.rs  mods.rs  process.rs  profile.rs  steam.rs  version.rs
crates/dayz-core/src/servers/: api.rs  cache.rs  filter.rs  mod.rs  model.rs
crates/dayz-core/tests/fixtures/: servers.json
flatpak/: io.github.nikolaj95o.dayzlin.desktop  io.github.nikolaj95o.dayzlin.metainfo.xml  io.github.nikolaj95o.dayzlin.yml
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/summaries/: 093f3e7bf9aeaa3985cdb94abf6d80c2e3a6ed1668763c52e0fd64e860a60e12-ae7af646c2e0aa5af026df065dd5178e5cd69604ef266999dcccacf61e687de3.delta  1fcb567012a293639e14e79a6bd4fb7455929451bd75c0faa1cbee26203352fb-ae7af646c2e0aa5af026df065dd5178e5cd69604ef266999dcccacf61e687de3.delta  6bf1a6ecb08fd84e5cd3ba428ccd356d8d6647da8ca17627d80d1be6d397fa24-ae7af646c2e0aa5af026df065dd5178e5cd69604ef266999dcccacf61e687de3.delta  8219d8eef3277a068fafabc8c72350def80708357d386bc2690e939f66c858bf-6bf1a6ecb08fd84e5cd3ba428ccd356d8d6647da8ca17627d80d1be6d397fa24.delta  8219d8eef3277a068fafabc8c72350def80708357d386bc2690e939f66c858bf-ae7af646c2e0aa5af026df065dd5178e5cd69604ef266999dcccacf61e687de3.delta  9b6fead655ba9202fbd29d70a300340da07ddac303b04830515dc107de971cae-6bf1a6ecb08fd84e5cd3ba428ccd356d8d6647da8ca17627d80d1be6d397fa24.delta  b1187529ecf3334d8914adcc9fb0fbc5534c48e37e08feab927e704ea84e230c-8219d8eef3277a068fafabc8c72350def80708357d386bc2690e939f66c858bf.delta  b1187529ecf3334d8914adcc9fb0fbc5534c48e37e08feab927e704ea84e230c-ae7af646c2e0aa5af026df065dd5178e5cd69604ef266999dcccacf61e687de3.delta  (+12 more)
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: FillBar.svelte  FilterPanel.svelte  LaunchDialog.svelte  MessageDialog.svelte  (+11 more)
(+59 files in other folders)
