[package]
name = "dayz-core"
version = "0.1.4"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
fuzzy-matcher = "0.3"
tokio = { version = "1", features = ["fs", "rt", "macros", "time"] }
log = "0.4"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
